--- a/Y13TPIWebproject/Y13TPIWebproject.csproj
+++ b/Y13TPIWebproject/Y13TPIWebproject.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Images\" />
+    <None Include="wwwroot\Images\background.jpeg" />
   </ItemGroup>
 
 </Project>
