start of database/added identity

--- a/Y13TPIWebproject/appsettings.json
+++ b/Y13TPIWebproject/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Y13TPIWebprojectContextDBConnection": "Server=(localdb)\\mssqllocaldb;Database=Y13TPIWebproject;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
